# kempten-sandbox

./: .gitignore  README.md  links.md
itsys/uebung-12/: 12-1.asm  12-2-2.asm  12-3-2.asm  12-3.asm  12-5.asm
pfg1-uebung-10/: compile.sh
pfg1-uebung-10/header/: bib.h
pfg1-uebung-10/src/: bib.cpp
ss21/prog2/uebung002/002/: docker-compose.yaml
ss21/prog2/uebung002/0024/container/: Makefile  run-linux.sh  run-windows.sh
ss21/prog2/uebung003/: CMakeLists.txt  Makefile
ss21/prog2/uebung003/src/cpp/: FileCommander.cpp  FileException.cpp  FileInformationException.cpp  FileInterface.cpp  main.cpp
ss21/prog2/uebung003/src/include/: FileCommander.h  FileException.h  FileInformationException.h  FileInterface.h
ss21/prog2/uebung004/: CMakeLists.txt
ss21/prog2/uebung004/src/c/: glad.c
ss21/prog2/uebung004/src/cpp/: Color.cpp  GridViewer.cpp  PaletteGridViewer.cpp  ShaderInterface.cpp  Ue4Main.cpp  ViewPortGL.cpp  main.cpp
ss21/prog2/uebung004/src/include/: Color.h  PaletteGridViewer.h  WindowInterface.h
ss21/prog2/uebung004/src/include/glad/: glad.h
ss21/prog2/uebung005/container/src/cpp/: .ColorBuf.cpp.swp  Color.cpp  ColorBuf.cpp  main.cpp
ss21/prog2/uebung005/container/src/include/: .Color.h.swp  .ColorBuf.h.swp  Color.h  GridViewer.h  (+1 more)
ss21/prog2/uebung007/001/: CMakeLists.txt  debug.sh
ss21/prog2/uebung007/001/src/cpp/: SortingAlgorithms.cpp
ss21/prog2/uebung007/001/src/include/: InOrderIntRelation.h
ss21/prog2/uebung011/001/: CMakeLists.txt  Makefile
ws20-21/itsys/uebung-12/: 12-2.asm  12-4.asm
ws20-21/pfg1-uebung-10/src/: main.cpp
(+40 files in other folders)
